--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,13 +11,24 @@ variables:
 before_script:
   - apk add --no-cache python py-pip
   - pip install awscli
+  - $(aws ecr get-login --no-include-email --region eu-west-1)
 
 stages:
-  - publish
+  - build
+  - mark_latest
 
 build:
-  stage: publish
+  stage: build
   script:
-    - $(aws ecr get-login --no-include-email --region eu-west-1)
-    - docker build -t $REPOSITORY_URL .
-    - docker push $REPOSITORY_URL
+    - docker build --tag $REPOSITORY_URL:$CI_COMMIT_SHA .
+    - docker push $REPOSITORY_URL:$CI_COMMIT_SHA
+
+mark_latest:
+  only:
+    refs:
+      - master
+  stage: mark_latest
+  script:
+    - docker pull $REPOSITORY_URL:$CI_COMMIT_SHA
+    - docker tag $REPOSITORY_URL:$CI_COMMIT_SHA $REPOSITORY_URL:latest
+    - docker push $REPOSITORY_URL:latest
