--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ variables:
   REPOSITORY_URL: 829479169076.dkr.ecr.eu-west-1.amazonaws.com/motoshare/gitlab-ci-docker
 
 before_script:
-  - apk add --no-cache python py-pip
-  - pip install awscli
-  - $(aws ecr get-login --no-include-email --region eu-west-1)
+#  - apk add --no-cache python py-pip
+#  - pip install awscli
+#  - $(aws ecr get-login --no-include-email --region eu-west-1)
 
 stages:
   - build
@@ -21,6 +21,7 @@ build:
   stage: build
   script:
     - docker build --tag $REPOSITORY_URL:$CI_COMMIT_SHA .
+    - docker push $REPOSITORY_URL:$CI_COMMIT_SHA
 
 push_latest:
   only:
@@ -28,5 +29,6 @@ push_latest:
       - master
   stage: push_latest
   script:
-    - docker build --tag $REPOSITORY_URL:latest .
+    - docker pull $REPOSITORY_URL:$CI_COMMIT_SHA
+    - docker tag $REPOSITORY_URL:$CI_COMMIT_SHA $REPOSITORY_URL:latest
     - docker push $REPOSITORY_URL:latest
